Fix image stretch

--- a/_sass/_bulma.scss
+++ b/_sass/_bulma.scss
@@ -52,3 +52,8 @@ $family-sans-serif: "Titillium Web", sans-serif;
 		margin-top: 0;
 	}
 }
+
+
+.image.is-16by9 img {
+	object-fit: cover;
+}
